# lp-foundations-assignments

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yml
life_expectancy/: cleaning.py
life_expectancy/tests/: test_cleaning.py
