[project]
name = "life_expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Luísa Freitas <luisa.freitas@daredata.engineering>" }
]
dependencies = [
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov",
    "toml"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
source = ["life_expectancy"]
omit = ["*/conftest.py", "*/test*"]

[tool.coverage.report]
fail_under = 80
